apps/sabiane-data-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabiane-data-api
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: sabiane-data-api
